Updated My Profile Page 	- Moved Involvements code to "Components" folder located in "MyProfile" folder 	- Updated Involvements activity cards for screen support. Iphone 5 view spacing bug between the privacy switch and the activity's picture has been fixed 	- Involvements card has a new style similar to Identification and the Victory Promise

--- a/src/views/MyProfile/myProfile.scss
+++ b/src/views/MyProfile/myProfile.scss
@@ -7,11 +7,6 @@
   }
 }
 
-.noInvolvements {
-  padding-left: 16px;
-  color: $primary-cyan;
-}
-
 .tooltip {
   background-color: $neutral-dark-gray !important;
 }
